added missing logic related to the ui - feat: (DartCounterActivity, DartCounterViewModel, Player, MenuActivity, activity_dart_counter, activity_menu, dialog_edit_name, dialog_victory, player_view). Logic necessary to: choose the number of players and points to play. Add points, subtract missing points, go back through the points as many times as necessary, reset individual points, reset points for all, and change names. A menu was implemented, also random images for the player who wins the game

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,14 @@
         android:theme="@style/Theme.ContadorDardos"
         tools:targetApi="31">
 
-        <!-- DartCounter Activity -->
+        <!-- MenuActivity -->
         <activity
-            android:name=".ui.game.DartCounterActivity"
+            android:name=".ui.game.menu.MenuActivity"
             android:exported="true"/>
+
+        <!-- DartCounterActivity -->
+        <activity android:name=".ui.game.content.DartCounterActivity" />
+
 
 
     </application>
