--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,30 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/Theme.ContadorDardos"
         tools:targetApi="31">
 
-        <!-- MenuActivity -->
+        <!-- SplashActivity -->
         <activity
-            android:name=".ui.game.menu.MenuActivity"
+            android:name=".ui.game.splash.SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <!-- MenuActivity -->
+        <activity android:name=".ui.game.menu.MenuActivity"
             android:exported="true"/>
 
         <!-- DartCounterActivity -->
-        <activity android:name=".ui.game.content.DartCounterActivity" />
+        <activity android:name=".ui.game.content.DartCounterActivity"
+            android:exported="true"/>
 
 
 
